// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders album cover 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 0.5rem;
}

<div
  id="test-render-container"
>
  <div
    class="mock-album-cover emotion-0"
  >
    Album: {"name":"Test album","url":"http://test.com"}
    Size: Test size
    Highlighted: true
    Test children
  </div>
</div>
`;

exports[`renders album cover 2`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 0.5rem;
}

<div
  id="test-render-container"
>
  <div
    class="mock-album-cover emotion-0"
  >
    Album: {"name":"Test album 2","url":"http://test2.com"}
    Size: Test size 2
    Highlighted: false
    Test children
  </div>
</div>
`;

exports[`renders album cover 3`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 0.5rem;
}

<div
  id="test-render-container"
>
  <div
    class="mock-album-cover emotion-0"
  >
    Album: null
    Size: Test size 3
    Highlighted: undefined
    Test children
  </div>
</div>
`;
